Removed img, converted to div with the img background.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <main class="wrapper">
             <div class="wrapper__background--top"></div>
             <div class="summary">
-                <img src="./public/assets/illustration-hero.svg" class="summary__img--header" alt="hero" />
+                <div class="summary__img--container">
+                    <img src="./public/assets/illustration-hero.svg" class="summary__img--header" alt="hero" />
+                </div>
                 <div class="summary__container--content">
                     <div class="summary__container--header">
                         <h1 class="summary__title--header">Order Summary</h1>
