Saved HTML file

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="wrapper__background--top"></div>
             <div class="summary">
                 <div class="summary__img--container">
-                    <img src="./public/assets/illustration-hero.svg" class="summary__img--header" alt="hero" />
+                    <!-- <img src="./public/assets/illustration-hero.svg" class="summary__img--header" alt="hero" /> -->
                 </div>
                 <div class="summary__container--content">
                     <div class="summary__container--header">
